<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".AddStudentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginBottom"
            android:layout_marginEnd="@dimen/marginLeft"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginRight="@dimen/marginRight"
            android:layout_marginStart="@dimen/marginRight"
            android:layout_marginTop="@dimen/marginTop"
            android:orientation="vertical">


            <Button
                android:id="@+id/buttonAboutUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorButton"
                android:text="@string/about_us"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginBottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/student_aggregator_logo"
                    android:src="@drawable/logo_red" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_big"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="45dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editTextStudentName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_between_edit_text"
                        android:drawableLeft="@drawable/studentet"
                        android:drawablePadding="@dimen/small_padding"
                        android:drawableStart="@drawable/studentet"
                        android:hint="@string/student_registered_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_size_normal" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editTextContact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_between_edit_text"
                        android:drawableLeft="@drawable/contactet"
                        android:drawablePadding="@dimen/small_padding"
                        android:drawableStart="@drawable/contactet"
                        android:hint="@string/password_hint"
                        android:imeActionId="@+id/editTextAdd"
                        android:imeActionLabel="Add"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_size_normal" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/buttonAddStudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginTop"
                    android:background="@color/colorButton"
                    android:fontFamily="sans-serif-normal"
                    android:text="@string/add_student"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_normal_smaller" />

                <TextView
                    android:id="@+id/textViewDummyStudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginTop"
                    android:fontFamily="sans-serif-normal"
                    android:gravity="center"
                    android:text="@string/use_dummy_student"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_normal_smaller" />
                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:text="@string/btn_link_to_register"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp" />
                <Button
                    android:id="@+id/btn_resetpassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:text="@string/forgotPassword"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp" />
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="20dp"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
